@@ -190,6 +190,7 @@ namespace libtorrent::aux {
 		virtual proxy_settings proxy() const = 0;
 
 #if TORRENT_USE_I2P
+		virtual i2p_connection& i2p_conn() = 0;
 		virtual char const* i2p_session() const = 0;
 		virtual std::string const& local_i2p_endpoint() const = 0;
 #endif
