@@ -23,6 +23,7 @@
 #include "libtorrent/error.hpp"
 #include "libtorrent/error_code.hpp"
 #include "libtorrent/extensions.hpp"
+#include "libtorrent/extensions/i2p_pex.hpp"
 #include "libtorrent/extensions/smart_ban.hpp"
 #include "libtorrent/extensions/ut_metadata.hpp"
 #include "libtorrent/extensions/ut_pex.hpp"
