@@ -20,6 +20,9 @@ see LICENSE file.
 #include "libtorrent/aux_/torrent_peer_allocator.hpp"
 #include "libtorrent/ip_filter.hpp"
 #include "libtorrent/peer_class.hpp"
+#if TORRENT_USE_I2P
+#include "libtorrent/i2p_stream.hpp"
+#endif
 
 #if TORRENT_USE_SSL
 #include "libtorrent/aux_/ssl.hpp"
@@ -157,6 +160,11 @@ struct session_mock : aux::session_interface
 		return empty;
 	}
 	char const* i2p_session() const override { return nullptr; }
+	i2p_connection& i2p_conn() override
+	{
+		static i2p_connection dummy(_io_context);
+		return dummy;
+	}
 #endif
 
 #ifndef TORRENT_DISABLE_DHT
